--- a/template/Makefile.tmpl
+++ b/template/Makefile.tmpl
@@ -6,7 +6,7 @@ GOPATH:=$(shell go env GOPATH)
 
 proto:
 	go get github.com/golang/protobuf/protoc-gen-go
-	protoc -I . {{.Name}}.proto --lile-server_out=. --go_out=plugins=grpc:${GOPATH}/src
+	protoc -I . {{.Name}}.proto --gorpc-server_out=. --go_out=plugins=grpc:${GOPATH}/src
 
 build: proto
 	go build -o build/{{.RelativeName}} {{.RelativeName}}/main.go
